# Drone-commutication-server

./: CMakeLists.txt  README.md  bring_up_isolated_IP.sh  drone_server.cpp
Drone/: drone_server.cpp  drone_server.h  main.cpp
GroundBase/: ground_base.cpp  ground_base.h  main.cpp
Screenshots/: project_structure.txt
